AzureDevTestLabs/Environments/WebApp-ASE/azuredeploy.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "vnetSegmentPrefix": {
            "type": "string",
            "defaultValue": "172.10",
            "metadata": {
                "description": "The IP Prefix range"
            }
        },
        "dnsSuffix": {
            "type": "string",
            "defaultValue": "",
            "metadata": {
                "description": "Used *only* when deploying an ILB enabled ASE.  Set this to the root domain associated with the ASE.  For example: contoso.com"
            }
        },
        "aseName": {
            "type": "string"
        },
        "appServicePlanName": {
            "type": "string"
        },
        "webAppName": {
            "type": "string",
            "metadata": {
                "description": "Name of the web application to be deployed"
            }
        },
        "alwaysOn": {
            "type": "bool",
            "defaultValue": true,
            "metadata": {
                "description": "Enables the application to always run, (true) is required for web jobs"
            }
        },
        "environment": {
            "type": "string",
            "allowedValues": [
                "prod",
                "qa",
                "test",
                "dev"
            ],
            "defaultValue": "dev"
        }
    },
    "variables": {
        "vNetPrivateName": "[concat(resourceGroup().name, '-vnet')]",
        "vNetPrivatePrefix": "[concat(parameters('vnetSegmentPrefix'), '.0.0/16')]",
        "vNetPrivateSubnetPeerName": "Subnet-1",
        "vNetPrivateSubnetPeerPrefix": "[concat(parameters('vnetSegmentPrefix'), '.1.0/24')]",
        "vNetPrivateSubnetVMName": "Subnet-2",
        "vNetPrivateSubnetVMPrefix": "[concat(parameters('vnetSegmentPrefix'), '.2.0/24')]",
        "vNetPrivateSubnetFrontName": "Subnet-3",
        "vNetPrivateSubnetFrontPrefix": "[concat(parameters('vnetSegmentPrefix'), '.3.0/24')]",
        "nsgPeerVNetName": "[concat(variables('vNetPrivateSubnetPeerName'), 'NSG')]",
        "nsgVMVNetName": "[concat(variables('vNetPrivateSubnetVMName'), 'NSG')]",
        "nsgFrontVNetName": "[concat(variables('vNetPrivateSubnetFrontName'), 'NSG')]",
        "vNetRoutingTableName": "[concat(resourceGroup().name, '-rtable')]",
        "aseEnvironmentSettings": {
            "dev": {
                "label": "Development",
                "internalLoadBalancingMode": 0,
                "ipsslAddressCount": 2,
                "frontEndSize": "Small",
                "frontEndInstances": 1,
                "pricingTier": "1",
                "pricingTierCapacity": 1,
                "perSiteScaling": false,
                "numberOfWorkersScaleOut": 1
            },
            "test": {
                "label": "TEST",
                "internalLoadBalancingMode": 3,
                "ipsslAddressCount": 0,
                "frontEndSize": "Medium",
                "frontEndInstances": 2,
                "pricingTier": "2",
                "pricingTierCapacity": 2,
                "perSiteScaling": true,
                "numberOfWorkersScaleOut": 1
            },
            "qa": {
                "label": "UAT",
                "internalLoadBalancingMode": 3,
                "ipsslAddressCount": 0,
                "frontEndSize": "Medium",
                "frontEndInstances": 2,
                "pricingTier": "2",
                "pricingTierCapacity": 2,
                "perSiteScaling": true,
                "numberOfWorkersScaleOut": 1
            },
            "prod": {
                "label": "Production",
                "internalLoadBalancingMode": 3,
                "ipsslAddressCount": 0,
                "frontEndSize": "Large",
                "frontEndInstances": 2,
                "pricingTier": "3",
                "pricingTierCapacity": 3,
                "perSiteScaling": true,
                "numberOfWorkersScaleOut": 1
            }
        },
        "aseLabel": "[variables('aseEnvironmentSettings')[parameters('environment')].label]",
        "frontEndSize": "[variables('aseEnvironmentSettings')[parameters('environment')].frontEndSize]",
        "frontEndInstances": "[variables('aseEnvironmentSettings')[parameters('environment')].frontEndInstances]",
        "internalLoadBalancingMode": "[variables('aseEnvironmentSettings')[parameters('environment')].internalLoadBalancingMode]",
        "ipsslAddressCount": "[variables('aseEnvironmentSettings')[parameters('environment')].ipsslAddressCount]",
        "pricingTier": "[concat('I', variables('aseEnvironmentSettings')[parameters('environment')].pricingTier)]",
        "pricingTierCapacity": "[variables('aseEnvironmentSettings')[parameters('environment')].pricingTierCapacity]",
        "perSiteScaling": "[variables('aseEnvironmentSettings')[parameters('environment')].perSiteScaling]",
        "numberOfWorkersScaleOut": "[variables('aseEnvironmentSettings')[parameters('environment')].numberOfWorkersScaleOut]",
        "stagingSlotName": "staging",
        "webAppStagingSlotName": "[concat(parameters('webAppName'), '/', variables('stagingSlotName'))]",
        "webAppSettings": {
            "ASPNETCORE_ENVIRONMENT": "[variables('aseLabel')]",
            "MSDEPLOY_RENAME_LOCKED_FILES": "1"
        }
    },
    "resources": [
        {
            "apiVersion": "2019-04-01",
            "type": "Microsoft.Network/routeTables",
            "name": "[variables('vNetRoutingTableName')]",
            "location": "[resourceGroup().location]",
            "tags": {
                "environment": "[parameters('environment')]",
                "purpose": "[variables('aseLabel')]"
            },
            "properties": {
                "routes": [
                    {
                        "name": "ase-functional-route",
                        "properties": {
                            "addressPrefix": "0.0.0.0/0",
                            "nextHopType": "Internet"
                        }
                    }
                ]
            }
        },
        {
            "apiVersion": "2018-11-01",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[variables('nsgPeerVNetName')]",
            "location": "[resourceGroup().location]",
            "tags": {
                "environment": "[parameters('environment')]",
                "purpose": "[variables('aseLabel')]",
                "displayName": "[variables('nsgPeerVNetName')]"
            },
            "properties": {
                "securityRules": []
            }
        },
        {
            "apiVersion": "2018-11-01",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[variables('nsgVMVNetName')]",
            "location": "[resourceGroup().location]",
            "tags": {
                "environment": "[parameters('environment')]",
                "purpose": "[variables('aseLabel')]",
                "displayName": "[variables('nsgVMVNetName')]"
            },
            "properties": {
                "securityRules": [
                    {
                        "name": "Inbound-management",
                        "properties": {
                            "description": "Used to manage ASE from public VIP",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "454-455",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "Inbound-Load-Balancer",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "16001",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "AzureLoadBalancer",
                            "access": "Allow",
                            "priority": 105,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "ASE-internal-inbound",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "[variables('vNetPrivateSubnetVMPrefix')]",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 110,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "Inbound-HTTP",
                        "properties": {
                            "description": "Allow HTTP",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "80",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 120,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "Inbound-HTTPS",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 130,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "Inbound-FTP",
                        "properties": {
                            "description": "Allow FTP over port 21",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "21",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 140,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "Inbound-FTPS",
                        "properties": {
                            "description": "Allow FTPS",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "990",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 150,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "Inbound-FTP-Data",
                        "properties": {
                            "description": "FTP-Data",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "10001-10020",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 160,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "Inbound-Remote-Debugging",
                        "properties": {
                            "description": "Visual Studio remote debugging",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "4016-4024",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 170,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "Inbound-PortScan-7654",
                        "properties": {
                            "description": "Allow Azure open port scan",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "7654",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 180,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "Inbound-PortScan-1221",
                        "properties": {
                            "description": "Allow Azure open port scan",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "1221",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 185,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "Outbound-HTTPS",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Outbound"
                        }
                    },
                    {
                        "name": "Outbound-HTTP",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "80",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 105,
                            "direction": "Outbound"
                        }
                    },
                    {
                        "name": "Outbound-NTP",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "123",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 110,
                            "direction": "Outbound"
                        }
                    },
                    {
                        "name": "Outbound-DB",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "1433",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 120,
                            "direction": "Outbound"
                        }
                    },
                    {
                        "name": "Outbound-monitoring",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "12000",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 130,
                            "direction": "Outbound"
                        }
                    },
                    {
                        "name": "Outbound-DNS",
                        "properties": {
                            "description": "DNS",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "53",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 140,
                            "direction": "Outbound"
                        }
                    },
                    {
                        "name": "ASE-internal-outbound",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "[variables('vNetPrivateSubnetVMPrefix')]",
                            "access": "Allow",
                            "priority": 160,
                            "direction": "Outbound"
                        }
                    },
                    {
                        "name": "ASE-to-VNET",
                        "properties": {
                            "description": "ASE to VNET",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "[variables('vNetPrivatePrefix')]",
                            "access": "Allow",
                            "priority": 200,
                            "direction": "Outbound"
                        }
                    },
                    {
                        "name": "Internet-outbound",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "Internet",
                            "access": "Allow",
                            "priority": 1000,
                            "direction": "Outbound"
                        }
                    }
                ],
                "defaultSecurityRules": [
                    {
                        "name": "AllowVnetInBound",
                        "properties": {
                            "description": "Allow inbound traffic from all VMs in VNET",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 65000,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowAzureLoadBalancerInBound",
                        "properties": {
                            "description": "Allow inbound traffic from azure load balancer",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "AzureLoadBalancer",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 65001,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "DenyAllInBound",
                        "properties": {
                            "description": "Deny all inbound traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 65500,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowVnetOutBound",
                        "properties": {
                            "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 65000,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowInternetOutBound",
                        "properties": {
                            "description": "Allow outbound traffic from all VMs to Internet",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "Internet",
                            "access": "Allow",
                            "priority": 65001,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "DenyAllOutBound",
                        "properties": {
                            "description": "Deny all outbound traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 65500,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ]
            }
        },
        {
            "apiVersion": "2018-11-01",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[variables('nsgFrontVNetName')]",
            "location": "[resourceGroup().location]",
            "tags": {
                "environment": "[parameters('environment')]",
                "purpose": "[variables('aseLabel')]",
                "displayName": "[variables('nsgFrontVNetName')]"
            },
            "properties": {
                "securityRules": [
                    {
                        "name": "allow-rdp-rule",
                        "properties": {
                            "description": "Allow RDP",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "3389",
                            "sourceAddressPrefix": "Internet",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "allow-https-rule",
                        "properties": {
                            "description": "Allow HTTPS",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "Internet",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 110,
                            "direction": "Inbound"
                        }
                    }
                ]
            }
        },
        {
            "name": "[variables('vNetPrivateName')]",
            "type": "Microsoft.Network/virtualNetworks",
            "location": "[resourceGroup().location]",
            "apiVersion": "2018-11-01",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgPeerVNetName'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgVMVNetName'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgFrontVNetName'))]"
            ],
            "tags": {
                "environment": "[parameters('environment')]",
                "purpose": "[variables('aseLabel')]",
                "displayName": "[variables('vNetPrivateName')]"
            },
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "[variables('vNetPrivatePrefix')]"
                    ]
                },
                "subnets": [
                    {
                        "name": "[variables('vNetPrivateSubnetPeerName')]",
                        "properties": {
                            "addressPrefix": "[variables('vNetPrivateSubnetPeerPrefix')]",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgPeerVNetName'))]"
                            },
                            "routeTable": {
                                "id": "[resourceId('Microsoft.Network/routeTables', variables('vNetRoutingTableName'))]"
                            },
                            "serviceEndpoints": [
                                {
                                    "service": "Microsoft.Sql",
                                    "locations": [
                                        "[resourceGroup().location]"
                                    ]
                                },
                                {
                                    "service": "Microsoft.Storage",
                                    "locations": [
                                        "[resourceGroup().location]"
                                    ]
                                }
                            ]
                        }
                    },
                    {
                        "name": "[variables('vNetPrivateSubnetVMName')]",
                        "properties": {
                            "addressPrefix": "[variables('vNetPrivateSubnetVMPrefix')]",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgVMVNetName'))]"
                            },
                            "routeTable": {
                                "id": "[resourceId('Microsoft.Network/routeTables', variables('vNetRoutingTableName'))]"
                            },
                            "serviceEndpoints": [
                                {
                                    "service": "Microsoft.Sql",
                                    "locations": [
                                        "[resourceGroup().location]"
                                    ]
                                },
                                {
                                    "service": "Microsoft.Storage",
                                    "locations": [
                                        "[resourceGroup().location]"
                                    ]
                                }
                            ]
                        }
                    },
                    {
                        "name": "[variables('vNetPrivateSubnetFrontName')]",
                        "properties": {
                            "addressPrefix": "[variables('vNetPrivateSubnetFrontPrefix')]",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgFrontVNetName'))]"
                            },
                            "routeTable": {
                                "id": "[resourceId('Microsoft.Network/routeTables', variables('vNetRoutingTableName'))]"
                            },
                            "serviceEndpoints": [
                                {
                                    "service": "Microsoft.Sql",
                                    "locations": [
                                        "[resourceGroup().location]"
                                    ]
                                },
                                {
                                    "service": "Microsoft.Storage",
                                    "locations": [
                                        "[resourceGroup().location]"
                                    ]
                                }
                            ]
                        }
                    }
                ]
            }
        },
        {
            "name": "[parameters('aseName')]",
            "type": "Microsoft.Web/hostingEnvironments",
            "apiVersion": "2018-02-01",
            "kind": "ASEV2",
            "location": "[resourceGroup().location]",
            "tags": {
                "environment": "[parameters('environment')]",
                "purpose": "[variables('aseLabel')]"
            },
            "properties": {
                "vnetResourceGroupName": "[resourceGroup().name]",
                "virtualNetwork": {
                    "Id": "[resourceId(resourceGroup().name, 'Microsoft.Network/virtualNetworks', variables('vNetPrivateName'))]",
                    "Subnet": "[variables('vNetPrivateSubnetVMName')]"
                },
                "multiSize": "[variables('frontEndSize')]",
                "multiRoleCount": "[variables('frontEndInstances')]",
                "internalLoadBalancingMode": "[variables('internalLoadBalancingMode')]",
                "dnsSuffix": "[if(not(empty(parameters('dnsSuffix'))), parameters('dnsSuffix'), json('null'))]",
                "ipsslAddressCount": "[variables('ipsslAddressCount')]",
                "networkAccessControlList": [],
                "frontEndScaleFactor": 15,
                "suspended": false
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', variables('vNetPrivateName'))]"
            ]
        },
        {
            "name": "[parameters('appServicePlanName')]",
            "type": "Microsoft.Web/serverfarms",
            "apiVersion": "2016-09-01",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "[resourceId('Microsoft.Web/hostingEnvironments', parameters('aseName'))]"
            ],
            "tags": {
                "environment": "[parameters('environment')]",
                "purpose": "[variables('aseLabel')]"
            },
            "kind": "app",
            "properties": {
                "name": "[parameters('appServicePlanName')]",
                "hostingEnvironmentProfile": {
                    "id": "[resourceId('Microsoft.Web/hostingEnvironments', parameters('aseName'))]"
                },
                "perSiteScaling": "[variables('perSiteScaling')]"
            },
            "sku": {
                "name": "[variables('pricingTier')]",
                "tier": "Isolated",
                "size": "[variables('pricingTier')]",
                "family": "I",
                "capacity": "[variables('pricingTierCapacity')]"
            }
        },
        {
            "type": "Microsoft.Web/sites",
            "apiVersion": "2016-08-01",
            "name": "[parameters('webAppName')]",
            "location": "[resourceGroup().location]",
            "kind": "app",
            "tags": {
                "environment": "[parameters('environment')]",
                "purpose": "[variables('aseLabel')]"
            },
            "dependsOn": [
                "[resourceId('Microsoft.Web/serverfarms', parameters('appServicePlanName'))]"
            ],
            "properties": {
                "enabled": true,
                "reserved": false,
                "clientAffinityEnabled": false,
                "clientCertEnabled": false,
                "containerSize": 0,
                "dailyMemoryTimeQuota": 0,
                "httpsOnly": true,
                "siteConfig": {
                    "alwaysOn": "[parameters('alwaysOn')]",
                    "phpVersion": "Off",
                    "javaVersion": "Off",
                    "connectionStrings": []
                },
                "serverFarmId": "[resourceId('Microsoft.Web/serverfarms', parameters('appServicePlanName'))]",
                "hostingEnvironmentProfile": {
                    "id": "[resourceId('Microsoft.Web/hostingEnvironments', parameters('aseName'))]"
                },
                "numberOfWorkers": "[variables('numberOfWorkersScaleOut')]"
            },
            "resources": [
                {
                    "type": "config",
                    "name": "appsettings",
                    "apiVersion": "2016-08-01",
                    "dependsOn": [
                        "[resourceId('Microsoft.Web/Sites', parameters('webAppName'))]"
                    ],
                    "properties": "[variables('webAppSettings')]"
                }
            ]
        },
        {
            "type": "Microsoft.Web/sites/slots",
            "kind": "app",
            "name": "[variables('webAppStagingSlotName')]",
            "apiVersion": "2016-08-01",
            "location": "[resourceGroup().location]",
            "properties": {
                "enabled": true,
                "serverFarmId": "[resourceId('Microsoft.Web/serverfarms', parameters('appServicePlanName'))]",
                "clientAffinityEnabled": false,
                "httpsOnly": true,
                "siteConfig": {
                    "alwaysOn": false,
                    "phpVersion": "Off",
                    "javaVersion": "Off",
                    "connectionStrings": []
                }
            },
            "resources": [
                {
                    "type": "config",
                    "name": "appsettings",
                    "apiVersion": "2016-08-01",
                    "dependsOn": [
                        "[resourceId('Microsoft.Web/Sites/slots', parameters('webAppName'), variables('stagingSlotName'))]"
                    ],
                    "properties": "[variables('webAppSettings')]"
                }
            ],
            "dependsOn": [
                "[resourceId('Microsoft.Web/sites', parameters('webAppName'))]"
            ]
        }
    ],
    "outputs": {
        "hostingEnvironmentId": {
            "type": "string",
            "value": "[resourceId('Microsoft.Web/hostingEnvironments', parameters('aseName'))]"
        },
        "serverfarmsId": {
            "type": "string",
            "value": "[resourceId('Microsoft.Web/serverfarms', parameters('appServicePlanName'))]"
        },
        "aseLabel": {
            "type": "string",
            "value": "[variables('aseLabel')]"
        }
    }
}
